Fix month's central alignment in progress indicator

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -98,7 +98,7 @@ body {
   position: absolute;
   line-height: 60px;
   font-size: 60px;
-  top: 75px;
+  top: 80px;
   padding-left: 165px;
   // display: block;
   color: $mdc-theme-secondary;
